# lpc1114base

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
lib/lpc_chip_11cxx_lib/: CMakeLists.txt
src/: FreeRTOSConfig.h  cr_startup_lpc11xx.c  lpc1114_333.ld  lpc11xx.svd  lpc11xx_crp.c  main.c  sysinit.c
